# harp.core.esp32

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml  library.json  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1
docs/: core-network-register-extension.md  network-manager-operational-notes.md  synchronization-implementation-notes.md
examples/minimal_platformio/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1
examples/minimal_platformio/src/: CMakeLists.txt  idf_component.yml  main.cpp
examples/minimal_platformio/test/: README  enable_heartbeat.py  get_info.py  harp_tcp_test_utils.py  tcp_test_config.py  test_harp_tcp.py  test_reply_speed.py  test_tcp_heartbeat.py  test_tcp_rtt.py  test_tcp_timestamp_micro_regression.py  test_tcp_wifi_config_reconnect_persistence.py  test_transport_partial_tcp_does_not_block_usb.py
inc/: app_loadcell.h  app_statusLED.h  arm_regs.h  bb_loadcell.h  bb_statusLED.h  core_registers.h  harp_c_app.cpp  harp_c_app.h  harp_core.h  harp_synchronizer.h  reg_types.h  stdio_usb.h  tusb_config.h
include/: core_reg_bits.h  core_registers.h  harp_c_app.h  harp_core.h  harp_message.h  harp_synchronizer.h  network_manager.h  tusb_config.h
src/: CMakeLists.txt  app_loadcell.cpp  app_statusLED.cpp  bb_loadcell.cpp  bb_statusLED.cpp  core_registers.cpp  harp_c_app.cpp  harp_core.cpp  harp_synchronizer.cpp  idf_component.yml  main.cpp  network_manager.cpp  status_led.cpp  usb_descriptors.c
test/: get_timestamp.py  reboot_to_usb_device.py  set_mode.py  test_loadcell.py  test_reply_speed.py  test_status_led.py  update_local_time.py
